clusters/central-tx-atx-munishm/myapp/myapp/ingressHttps.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  namespace: myapp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"

spec:
  tls:
  - secretName: myapp
    hosts:
    - 20.163.92.116
  rules:
  - host: 20.163.92.116
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: myapp
            port:
              number: 8080
